iptables/iptables-backup-v4.conf
# Generated by iptables-save v1.8.7 on Thu Jan 23 22:21:56 2025
*mangle
:PREROUTING ACCEPT [212528:246501498]
:INPUT ACCEPT [967:298378]
:FORWARD ACCEPT [211070:246166689]
:OUTPUT ACCEPT [968:895289]
:POSTROUTING ACCEPT [212038:247061978]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Jan 23 22:21:56 2025
# Generated by iptables-save v1.8.7 on Thu Jan 23 22:21:56 2025
*filter
:INPUT ACCEPT [336:79324]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [968:895289]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
-A INPUT -j LIBVIRT_INP
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3399 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 3399 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3389 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 3389 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 465 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9090 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8081 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5050 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8745 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 27813 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 28497 -j ACCEPT
-A INPUT -p udp -m udp --dport 4449 -j ACCEPT
-A INPUT -p udp -m udp --dport 56000 -j ACCEPT
-A INPUT -p udp -m udp --dport 56100 -j ACCEPT
-A INPUT -p udp -m udp --dport 4449 -j ACCEPT
-A INPUT -p udp -m udp --dport 56000 -j ACCEPT
-A INPUT -p udp -m udp --dport 56100 -j ACCEPT
-A INPUT -p udp -m udp --dport 4449 -j ACCEPT
-A INPUT -p udp -m udp --dport 56000 -j ACCEPT
-A INPUT -p udp -m udp --dport 56100 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-f42fdcf25341 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-f42fdcf25341 -j DOCKER
-A FORWARD -i br-f42fdcf25341 ! -o br-f42fdcf25341 -j ACCEPT
-A FORWARD -i br-f42fdcf25341 -o br-f42fdcf25341 -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A FORWARD -s 10.182.0.0/24 -j ACCEPT
-A FORWARD -d 10.182.0.0/24 -j ACCEPT
-A OUTPUT -j LIBVIRT_OUT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 4449 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Thu Jan 23 22:21:56 2025
# Generated by iptables-save v1.8.7 on Thu Jan 23 22:21:56 2025
*nat
:PREROUTING ACCEPT [1286:94581]
:INPUT ACCEPT [13:934]
:OUTPUT ACCEPT [146:13032]
:POSTROUTING ACCEPT [154:13472]
:DOCKER - [0:0]
:LIBVIRT_PRT - [0:0]
:MYST - [0:0]
-A PREROUTING -s 10.182.0.0/24 -j MYST
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-f42fdcf25341 -j MASQUERADE
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -s 172.19.0.2/32 -d 172.19.0.2/32 -p tcp -m tcp --dport 8978 -j MASQUERADE
-A POSTROUTING -s 10.182.0.0/24 ! -d 10.182.0.0/24 -j SNAT --to-source 10.0.0.65
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 4449 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 4449 -j DNAT --to-destination 172.17.0.2:4449
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A MYST -d 10.182.0.1/32 -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 11253
-A MYST -d 10.182.0.1/32 -p udp -m udp --dport 53 -j REDIRECT --to-ports 11253
-A MYST -d 10.0.0.0/8 -j DNAT --to-destination 240.0.0.1
-A MYST -d 172.16.0.0/12 -j DNAT --to-destination 240.0.0.1
-A MYST -d 192.168.0.0/16 -j DNAT --to-destination 240.0.0.1
-A MYST -d 127.0.0.0/8 -j DNAT --to-destination 240.0.0.1
COMMIT
# Completed on Thu Jan 23 22:21:56 2025
